fix text overlapping buttons

--- a/src/components/HelpText/HelpText.module.scss
+++ b/src/components/HelpText/HelpText.module.scss
@@ -8,5 +8,6 @@
   position: fixed;
 
   bottom: calc(10px + 32px);
+  pointer-events: none;
   // right: 50%;
 }
